; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_i915_gem.c_i915_gem_object_get_pages.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_i915_gem.c_i915_gem_object_get_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_gem_object = type { i64, i32, i32, i64, %struct.drm_i915_gem_object_ops*, %struct.TYPE_6__ }
%struct.drm_i915_gem_object_ops = type { i32 (%struct.drm_i915_gem_object.0*)* }
%struct.drm_i915_gem_object.0 = type opaque
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.drm_i915_private* }
%struct.drm_i915_private = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@I915_MADV_WILLNEED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"Attempting to obtain a purgeable object\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i915_gem_object_get_pages(%struct.drm_i915_gem_object* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.drm_i915_gem_object*, align 8
  %4 = alloca %struct.drm_i915_private*, align 8
  %5 = alloca %struct.drm_i915_gem_object_ops*, align 8
  %6 = alloca i32, align 4
  store %struct.drm_i915_gem_object* %0, %struct.drm_i915_gem_object** %3, align 8
  %7 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %3, align 8
  %8 = getelementptr inbounds %struct.drm_i915_gem_object, %struct.drm_i915_gem_object* %7, i32 0, i32 5
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load %struct.drm_i915_private*, %struct.drm_i915_private** %11, align 8
  store %struct.drm_i915_private* %12, %struct.drm_i915_private** %4, align 8
  %13 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %3, align 8
  %14 = getelementptr inbounds %struct.drm_i915_gem_object, %struct.drm_i915_gem_object* %13, i32 0, i32 4
  %15 = load %struct.drm_i915_gem_object_ops*, %struct.drm_i915_gem_object_ops** %14, align 8
  store %struct.drm_i915_gem_object_ops* %15, %struct.drm_i915_gem_object_ops** %5, align 8
  %16 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %3, align 8
  %17 = getelementptr inbounds %struct.drm_i915_gem_object, %struct.drm_i915_gem_object* %16, i32 0, i32 3
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %53

21:                                               ; preds = %1
  %22 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %3, align 8
  %23 = getelementptr inbounds %struct.drm_i915_gem_object, %struct.drm_i915_gem_object* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @I915_MADV_WILLNEED, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %31

27:                                               ; preds = %21
  %28 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %29 = load i32, i32* @EINVAL, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %2, align 4
  br label %53

31:                                               ; preds = %21
  %32 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %3, align 8
  %33 = getelementptr inbounds %struct.drm_i915_gem_object, %struct.drm_i915_gem_object* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @BUG_ON(i32 %34)
  %36 = load %struct.drm_i915_gem_object_ops*, %struct.drm_i915_gem_object_ops** %5, align 8
  %37 = getelementptr inbounds %struct.drm_i915_gem_object_ops, %struct.drm_i915_gem_object_ops* %36, i32 0, i32 0
  %38 = load i32 (%struct.drm_i915_gem_object.0*)*, i32 (%struct.drm_i915_gem_object.0*)** %37, align 8
  %39 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %3, align 8
  %40 = bitcast %struct.drm_i915_gem_object* %39 to %struct.drm_i915_gem_object.0*
  %41 = call i32 %38(%struct.drm_i915_gem_object.0* %40)
  store i32 %41, i32* %6, align 4
  %42 = load i32, i32* %6, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %31
  %45 = load i32, i32* %6, align 4
  store i32 %45, i32* %2, align 4
  br label %53

46:                                               ; preds = %31
  %47 = load %struct.drm_i915_gem_object*, %struct.drm_i915_gem_object** %3, align 8
  %48 = getelementptr inbounds %struct.drm_i915_gem_object, %struct.drm_i915_gem_object* %47, i32 0, i32 1
  %49 = load %struct.drm_i915_private*, %struct.drm_i915_private** %4, align 8
  %50 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 0
  %52 = call i32 @list_add_tail(i32* %48, i32* %51)
  store i32 0, i32* %2, align 4
  br label %53

53:                                               ; preds = %46, %44, %27, %20
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i32 @DRM_ERROR(i8*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
